--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <img src="./logo.png" alt="Oldies logo">
     <h1>Git & GitHub Crash Course</h1>
     <p>Because the basics are important!</p>
+    <p>
+        Learn more about Git in the
+        <a href="https://git-scm.com/book/en/v2">official docs</a> or
+        <a href="https://kodego.ph">Enroll at Kodego</a>.
+      </p>
+  
 
 </body>
 </html>
