--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="https://git-scm.com/book/en/v2">official docs</a> or
         <a href="https://kodego.ph">Enroll at Kodego</a>.
       </p>
+      <footer>this is a footer</footer>
   
 
 </body>
